Protocol Layer added, Use c++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.2)
 project(arctos_robot)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.c robot.c robot.h communication/serial.c communication/serial.h general.c general.h includes/DMCC/DMCC.c controller.c controller.h communication/bluetooth.c communication/bluetooth.h communication/rfid.c communication/rfid.h)
+set(SOURCE_FILES main.cpp robot.cpp robot.h communication/serial.cpp communication/serial.h general.cpp general.h includes/DMCC/DMCC.c Controller.cpp Controller.h communication/Bluetooth.cpp communication/Bluetooth.h communication/rfid.cpp communication/rfid.h communication/protocol/protocolLayer.cpp communication/protocol/protocolLayer.h communication/protocol/ProtocolLayer.cpp communication/protocol/ProtocolLayer.h)
 add_executable(arctos_robot ${SOURCE_FILES})
